Added Romaji button trigger and removed it being the default option
Binary changed
Be added to kana
some spellings corrections
added outputmsg kana

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
     "python.analysis.extraPaths": [
         "./SMFVF"
+    ],
+    "cSpell.words": [
+        "furi",
+        "getch",
+        "kbhit",
+        "Nusevei"
     ]
 }
