redid lib files under new architecture
updated gitignore

added is_file_damaged

adjusted file_ensurer to fit with new architecture

streamlined repair of kana/vocab files

--- a/.gitignore
+++ b/.gitignore
@@ -97,4 +97,9 @@ __pypackages__/
 .vs/ProjectSettings.json
 .vs/VSWorkspaceState.json
 .vs/Kudasai/v17/.wsuo
+
+## lib files
 lib/remote/has_connection_failed.txt
+
+## seisen config that im altering to test
+SeisenConfig_to_alter/
