gitignore update & slide refactoring to vocab settings handler

--- a/.gitignore
+++ b/.gitignore
@@ -98,8 +98,5 @@ __pypackages__/
 .vs/VSWorkspaceState.json
 .vs/Kudasai/v17/.wsuo
 
-## lib files
-lib/remote/has_connection_failed.txt
-
-## seisen config that im altering to test
-SeisenConfig_to_alter/
+## seisen files
+.seisen
